--- a/public/styles.css
+++ b/public/styles.css
@@ -18,8 +18,8 @@ h2 {
 }
 .app-container{
   /*background-color:blue;*/
-  width: 50% ;
-  margin: 0 auto;
+  width: 70% ;
+  /* margin: 0 auto; */
 
 }
   .app-header {
